Spacing and success colour fixes

--- a/src/_sass/vars-dark.scss
+++ b/src/_sass/vars-dark.scss
@@ -14,7 +14,7 @@ $pink: #DC29DD;
 $primary: #9722FF;
 $link: #27A2FD;
 $info: #3041F2;
-$success: #3CFF22;
+$success: #41D02A;
 $warning: #FCFF22;
 $danger: #FF2222;
 $dark: #1c1526 !default;
