--- a/src/_sass/vars-light.scss
+++ b/src/_sass/vars-light.scss
@@ -17,7 +17,7 @@ $primary-lighter: bulmaLighten($primary, 41%);
 
 $link: #2291E6;
 $info: #3041F2;
-$success: #3CFF22;
+$success: #41D02A;
 $warning: #FCFF22;
 $danger: #FF2222;
 $dark: $primary-lighter;
